@@ -5,6 +5,8 @@ CHANGES IN CUPS V1.4.0
 
 	- Localization updates (STR #3223, STR #3246, STR #3248, STR #3250)
 	- Documentation updates (STR #3225, STR #3230, STR #3242, STR #3260)
+	- The --with-pdftops configure option did not accept a full path to the
+	  filter (STR #3278)
 	- The banner filter did not position the back side image correctly
 	  (STR #3277)
 	- The dnssd backend could crash (STR #3272)
